--- a/configs/sample.yaml
+++ b/configs/sample.yaml
@@ -2,22 +2,26 @@ CUDNN:
   BENCHMARK: true
   DETERMINISTIC: false
   ENABLED: true
-GPUS: (0,1)
+# GPUS: (0,1)
+GPUS: (0,)
 OUTPUT_DIR: 'output'
 LOG_DIR: 'log'
 WORKERS: 3
 PRINT_FREQ: 10
 
 DATASET:
-  DATASET: camvid
-  ROOT: data/
-  TEST_SET: 'list/camvid/val.lst'
-  TRAIN_SET: 'list/camvid/trainval.lst'
-  NUM_CLASSES: 11
+  DATASET: CustomDataset
+  PICKLE_NAME: ""
+  ROOT: /home/bulgogi/bolero/dataset/aistt_dataset/dcdataset/TRAIN/segmentation/original
+  IMAGES: images
+  ANNOTATIONS: annotations
+  TRAIN_SET: "train.txt"
+  VALID_SET: "valid.txt"
+  NUM_CLASSES: 4
 MODEL:
   NAME: pidnet_s
   NUM_OUTPUTS: 2
-  PRETRAINED: "pretrained_models/cityscapes/PIDNet_S_Cityscapes_test.pt"
+  PRETRAINED: ""
 LOSS:
   USE_OHEM: true
   OHEMTHRES: 0.9
