--- a/configs/sample2.yaml
+++ b/configs/sample2.yaml
@@ -6,22 +6,21 @@ CUDNN:
 GPUS: (0,)
 OUTPUT_DIR: 'output'
 LOG_DIR: 'log'
-WORKERS: 6 
+WORKERS: 3
 PRINT_FREQ: 10
 
 DATASET:
   DATASET: CustomDataset
   PICKLE_NAME: ""
-  ROOT: /home/bulgogi/bolero/dataset/aistt_dataset/dcdataset/TRAIN/sample_dataset
+  ROOT: /home/bulgogi/bolero/dataset/aistt_dataset/dcdataset/TRAIN/segmentation/original
   IMAGES: images
   ANNOTATIONS: annotations
   TRAIN_SET: "train.txt"
   VALID_SET: "valid.txt"
-  NUM_CLASSES: 3
+  NUM_CLASSES: 4
 MODEL:
   NAME: pidnet_s
   NUM_OUTPUTS: 2
-  # PRETRAINED: "pretrained_models/imagenet/PIDNet_S_ImageNet.pth.tar"
   PRETRAINED: ""
 LOSS:
   USE_OHEM: false
@@ -31,17 +30,17 @@ LOSS:
   SB_WEIGHTS: 1.0
 TRAIN:
   IMAGE_SIZE:
-  - 336
-  - 192
-  BASE_SIZE: 336
-  BATCH_SIZE_PER_GPU: 8
+  - 960
+  - 720
+  BASE_SIZE: 960
+  BATCH_SIZE_PER_GPU: 6
   SHUFFLE: true
   BEGIN_EPOCH: 0
-  END_EPOCH: 5
+  END_EPOCH: 200
   RESUME: false
-  OPTIMIZER: adam 
-  LR: 0.001
-  WD: 0.0001
+  OPTIMIZER: sgd
+  LR: 0.005
+  WD: 0.0005
   MOMENTUM: 0.9
   NESTEROV: false
   FLIP: true
@@ -50,9 +49,9 @@ TRAIN:
   SCALE_FACTOR: 16
 TEST:
   IMAGE_SIZE:
-  - 336
-  - 192
-  BASE_SIZE: 336
+  - 960
+  - 720
+  BASE_SIZE: 960
   BATCH_SIZE_PER_GPU: 1
   FLIP_TEST: false
   MULTI_SCALE: false
